# ke-pkcs11-cryptoki

./: CMakeLists.txt  README.md
app/: testapp.c
inc/: ke_cryptoki.h
src/: pkcs11_main.c
